# qa_guru_hw19

./: README.md  pyproject.toml  test_reqres_api.py
